2002-08-28  Corinna Vinschen  <corinna@vinschen.de>

	* poll.cc (poll): Eliminate erroneous POLLERR conditional.

2002-08-26  Conrad Scott  <conrad.scott@dsl.pipex.com>

	* fhandler_socket.cc (fhandler_socket::check_peer_secret_event):
	Fix strace message.
	(fhandler_socket::connect): Remove sigframe.
	(fhandler_socket::accept): Ditto.
	(fhandler_socket::getsockname): Ditto.
	(fhandler_socket::getpeername): Ditto.
	(fhandler_socket::recvfrom): Ditto.
	(fhandler_socket::recvmsg): Ditto.
	(fhandler_socket::sendto): Ditto.
	(fhandler_socket::sendmsg): Ditto.
	(fhandler_socket::close): Ditto.
	(fhandler_socket::ioctl): Ditto.
	* ioctl.cc (ioctl): Add sigframe.
	*net.cc (cygwin_sendto): Ditto.
	(cygwin_recvfrom): Ditto.
	(cygwin_recvfrom): Ditto.
	(cygwin_connect): Ditto.
	(cygwin_shutdown): Ditto.
	(cygwin_getpeername): Ditto.
	(cygwin_accept): Ditto.  Improve strace message.
	(cygwin_getsockname): Ditto.  Ditto.
	(cygwin_recvmsg): Ditto.  Ditto.
	(cygwin_sendmsg): Fix strace message.

2002-08-27  Christopher Faylor  <cgf@redhat.com>

	* child_info.h: Add _PROC_WHOOPS enum value.
	(CURR_CHILD_INFO_MAGIC): Update.
	(child_info::magic): Make 'long'.
	* cygheap.h: Export _cygheap_start.
	* cygheap.cc: Don't declare _cygheap_start.
	* cygmagic: Use cksum to produce checksums.  Append 'U' to end of
	checksum.
	* dcrt0.cc (initial_env): Calculate sleep ms before reusing buffer.
	(_dll_crt0): Detect cygheap mismatch as indicative of different cygwin
	version.  Set child_proc_info to NULL when _PROC_WHOOPS.
	(multiple_cygwin_problem): If child_info specific problem, then set
	child_proc_info type to _PROC_WHOOPS.
	* shared_info.h (CURR_MOUNT_MAGIC): Update.
	(CURR_SHARED_MAGIC): Ditto.

2002-08-25  Conrad Scott  <conrad.scott@dsl.pipex.com>

	* fhandler.h (fhandler_socket::recvfrom): Fix prototype.
	(fhandler_socket::sendto): Ditto.
	* fhandler_socket.cc (fhandler_socket::recvfrom): Ditto.
	(fhandler_socket::sendto): Ditto.
	* include/sys/socket.h (recv): Fix prototype.