@@ -158,12 +158,13 @@ details. */
        58: Export memalign, valloc, malloc_trim, malloc_usable_size, mallopt,
            malloc_stats
        59: getsid
+       60: MSG_NOSIGNAL
      */
 
      /* Note that we forgot to bump the api for ualarm, strtoll, strtoull */
 
 #define CYGWIN_VERSION_API_MAJOR 0
-#define CYGWIN_VERSION_API_MINOR 59
+#define CYGWIN_VERSION_API_MINOR 60
 
      /* There is also a compatibity version number associated with the
 	shared memory regions.  It is incremented when incompatible
