@@ -1,5 +1,15 @@
 2002-08-28  Corinna Vinschen  <corinna@vinschen.de>
 
+	* fhandler_socket.cc (fhandler_socket::recvfrom): Eliminate flags
+	not understood by WinSock.
+	(fhandler_socket::sendto): Ditto.  If WinSock sendto() returns
+	WSAESHUTDOWN, change errno to EPIPE and raise SIGPIPE if MSG_NOSIGNAL
+	isn't set in flags.
+	* include/cygwin/socket.h: Define MSG_WINMASK and MSG_NOSIGNAL.
+	* include/cygwin/version.h: Bump API minor number.
+
+2002-08-28  Corinna Vinschen  <corinna@vinschen.de>
+
 	* poll.cc (poll): Eliminate erroneous POLLERR conditional.
 
 2002-08-26  Conrad Scott  <conrad.scott@dsl.pipex.com>
